[build-system]
requires = ["setuptools >= 51.1.2"]
build-backend = "setuptools.build_meta"

[project]
name = "periodic-table"
version = "0.1.86"
authors = [
    {name = "Hein Bekker", email = "hein@netbek.co.za"},
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "Jinja2 == 3.*",
]
requires-python = ">= 3.6"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://netbek.github.io/periodic-table"
Documentation = "https://netbek.github.io/periodic-table"
Repository = "https://github.com/netbek/periodic-table.git"
Issues = "https://github.com/netbek/periodic-table/issues"
Changelog = "https://github.com/netbek/periodic-table/releases"
